# axm-chat

./: README.md  index.html  pyproject.toml  start.sh
server/: axm_server.py
src/axm_chat/: __init__.py  cli.py  distill.py  engineering_lens.py  episodic.py  spoke.py
tests/: test_spoke.py
ui/: axm_chat_glass_onion.jsx  axm_chat_ui.jsx
